# CG-MPC-ECDSA

./: .gitignore  Cargo.toml  README.md  compile.sh  keygen_priv_result0.json  keygen_priv_result1.json  keygen_priv_result2.json  keygen_pub_result1.json  keygen_pub_result2.json  keygen_result0.json  keygen_result1.json  kill.sh  run_web.sh
cg_ecdsa_core/: Cargo.toml  build.rs
cg_ecdsa_core/src/: binaryqf.rs  cl_enc_proof.rs  clkeypair.rs  dl_com_zk.rs  eccl_setup.rs  eckeypair.rs  elgamal.rs  error.rs  hsmcl.rs  lib.rs  primitive.rs  promise_sigma.rs  signature.rs
classgroup/: Cargo.toml
classgroup/bench/: bench.rs
classgroup/src/: lib.rs
cli/: Cargo.toml  README.md
cli/src/: asia21_party_one.rs  asia_multi_party_keygen.rs  asia_multi_party_sign.rs  ccs21_party_one.rs  ccs21_party_two.rs  config.rs  console.rs  dmz21_multi_party_keygen.rs  dmz21_multi_party_sign.rs  dmz21_party_one.rs  dmz21_party_two.rs  ecdsa_keyrefresh.rs  lib.rs  log.rs  main.rs  mpc_ecdsa_web.rs  multi_party_ecdsa_keygen.rs  multi_party_ecdsa_sign.rs  party_one_ecdsa.rs  party_two_ecdsa.rs  two_party_ecdsa.rs  two_party_ecdsa_one.rs  two_party_ecdsa_two.rs  xax21_party_one.rs  xax21_party_two.rs
configs/: KMS_API.md  RESTAPI_CN.md  config_2pc.json  config_3pc.json  config_4pc.json  config_5pc.json  index.html  two_party_config.json
configs/onecase/: .gitignore  keygen_result0.json  keygen_result1.json  keygen_result2.json  sign_result.json
demo_test/node12_0/: config.json
demo_test/node12_1/: config.json
demo_test/node12_10/: config.json
demo_test/node12_11/: config.json
demo_test/node12_2/: config.json
demo_test/node12_3/: config.json
demo_test/node12_4/: config.json
demo_test/node12_5/: config.json
demo_test/node12_6/: config.json
demo_test/node12_7/: config.json
demo_test/node12_8/: config.json
demo_test/node12_9/: config.json
demo_test/node16_0/: config.json
demo_test/node16_1/: config.json
demo_test/node16_10/: config.json
demo_test/node16_11/: config.json
demo_test/node16_12/: config.json
demo_test/node16_13/: config.json
demo_test/node16_14/: config.json
demo_test/node16_15/: config.json
demo_test/node16_2/: config.json
demo_test/node16_3/: config.json
demo_test/node16_4/: config.json
demo_test/node16_5/: config.json
demo_test/node16_6/: config.json
demo_test/node16_7/: config.json
demo_test/node16_8/: config.json
demo_test/node16_9/: config.json
demo_test/node24_0/: config.json
demo_test/node24_1/: config.json
demo_test/node24_10/: config.json
demo_test/node24_11/: config.json
demo_test/node24_12/: config.json
demo_test/node24_13/: config.json
demo_test/node24_14/: config.json
demo_test/node24_15/: config.json
docs/: Performance.md
ffi/: ffi.h
keyshare/: Cargo.toml  README.md
keyshare/src/: 111.rs  common.rs  ecdsa_keyshare.rs  errors.rs  keyshare.rs  lib.rs  slices.rs
keyshare/test/: CMakeLists.txt  key_share_test.cpp
message/: Cargo.toml
multi_party/: Cargo.toml
multi_party/examples/: bench.rs  multi_party_demo.rs
multi_party/src/: lib.rs  party_i.rs  tests.rs
multi_party_ecdsa/: Cargo.toml
multi_party_ecdsa/docs/: Performance.md
multi_party_ecdsa/examples/: multi_party.rs  network_demo.rs  pkc20.rs  two_party.rs
multi_party_ecdsa/src/: lib.rs
multi_party_ecdsa/src/communication/: mod.rs  receiving_messages.rs  sending_messages.rs
multi_party_ecdsa/src/mta/: cl_based_mta.rs  mod.rs
multi_party_ecdsa/src/protocols/: mod.rs
multi_party_ecdsa/src/protocols/multi_party/: mod.rs
multi_party_ecdsa/src/protocols/multi_party/dmz21/: keygen.rs  keyrefresh.rs  sign.rs
multi_party_ecdsa/src/protocols/multi_party/ours/: keygen.rs  keyrefresh.rs  message.rs  mod.rs  party_i.rs  sign.rs  test.rs
multi_party_ecdsa/src/protocols/multi_party/pkc20/: party_i.rs
multi_party_ecdsa/src/protocols/two_party/: message.rs  mod.rs  party_one.rs  party_two.rs  test.rs
multi_party_ecdsa/src/protocols/two_party/asia21/: message.rs  mod.rs  party_one.rs  party_two.rs  test.rs
multi_party_ecdsa/src/protocols/two_party/ccs21/: mod.rs  party_one.rs  party_two.rs  test.rs
multi_party_ecdsa/src/protocols/two_party/ccs21/mta/: cl_based_mta.rs
multi_party_ecdsa/src/protocols/two_party/dmz21/: mod.rs  party_one.rs  party_two.rs
multi_party_ecdsa/src/protocols/two_party/xax21/: party_one.rs  party_two.rs  test.rs
multi_party_ecdsa/src/protocols/two_party/xax21/mta/: cl_based_mta.rs  mod.rs
multi_party_ecdsa/src/utilities/: cl_dl_proof.rs  cl_enc_proof.rs  cl_proof.rs  class.rs  class_group.rs  clkeypair.rs  dl_com_zk.rs  eckeypair.rs  elgamal.rs  error.rs  hsmcl.rs  mod.rs  promise_sigma.rs  promise_sigma_multi.rs  signature.rs
multi_party_pkc20/: Cargo.toml
online_offline/: Cargo.toml  README.md  offline_result.json  offline_result0.json  offline_result1.json
online_offline/src/: lib.rs
online_offline/src/communication/: receiving_messages.rs  sending_messages.rs
online_offline/src/examples/: console.rs  mod.rs  multi_party_ecdsa_keygen.rs  multi_party_ecdsa_sign.rs  online_offline_multi_party_ecdsa_sign.rs  two_party_ecdsa_one.rs  two_party_ecdsa_two.rs
online_offline/src/protocols/: mod.rs
online_offline/src/protocols/multi_party/: keygen.rs  message.rs  sign.rs  test.rs
online_offline/src/protocols/two_party/: message.rs  party_one.rs  party_two.rs  test.rs
p2p/: Cargo.toml  keygen_result0.json  sign_result.json
p2p/examples/: README.md  config.json  config_2pc.json  config_3pc.json  mpc_ecdsa_web.rs  multi_party_demo.rs  multi_party_keygen_demo.rs  multi_party_sign_demo.rs  network_demo.rs  server.rs  two_party_config.json  two_party_demo.rs
p2p/message/: Cargo.toml
p2p/message/src/: message_process.rs
p2p/readerwriter/src/: writer.rs
p2p/src/: codec.rs  cybershake.rs  errors.rs  lib.rs  mpc_io.rs  node.rs  peer.rs  priority.rs
test/: test.rs
two_party/: Cargo.toml
twoparty/: Cargo.toml
twoparty/PaxHeader/: build.rs
twoparty/benches/: sign.rs
twoparty/src/: lib.rs  main.rs
twoparty/src/protocols/: eccl_setup.rs  mod.rs  party_one.rs  party_two.rs
(+81 files in other folders)
