[package]
name = "cli"
version = "0.1.0"
authors = ["songxuyang", "wangxueli"]
edition = "2018"

[dependencies]
multi-party-ecdsa = {path = "../multi_party_ecdsa"}
curv = { package = "curv-kzen", version = "0.7" }
tokio = {version = "0.2", features=["full","sync"]}
tokio-util = {version = "0.3.1", features=["codec"]}
p2p = {path = "../p2p"}
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0"
bincode = "1.3.1"
structopt = "0.3.20"
message = {path = "../p2p/message"}
anyhow = "1.0"
log = "0.4.6"
env_logger = "0.9.0"
log4rs = "1.0.0"
async-std = { version = "1.6.2", features = ["attributes"] }

#[dependencies.class_group]
#git = "https://github.com/XuyangSong/class"
#tag = "v1.5.2"

# ##################################
# futures-core = { version = "0.3", default-features = false }
# futures-channel = "0.3"
# futures-util = { version = "0.3", default-features = false }
# hyper = "0.13"
# ##################################

# ##################################
# [dev-dependencies]
# pretty_env_logger = "0.4"
# url = "2.2"
# ##################################

[[bin]]
name = "mpc-ecdsa"
path = "src/main.rs"

# [[bin]]
# name = "mpc_ecdsa_web"
# path = "src/mpc_ecdsa_web.rs"