[package]
name = "keyshare"
version = "0.1.0"
authors = [""]
edition = "2018"

[dependencies]
curve25519-dalek = { version = "3", features = ["serde"] }
curv = { package = "curv-kzen", version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0"
thiserror = "1"
libc = "0.2.60"

[lib]
name = "keyshare"
crate-type = [ "cdylib", "staticlib" ]
