[package]
name = "p2p"
version = "0.1.0"
authors = ["Oleg Andreev <oleganza@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1"
merlin = "2.0"
rand_core = "0.5"
subtle = "2"
curve25519-dalek = { version = "3", features = ["serde"] }
hex = "^0.3"
futures = "0.3"
tokio = {version = "0.2", features=["full","sync"]}
tokio-util = {version = "0.3.1", features=["codec"]}
bytes = "0.5.4"
miscreant = "0.5"
rand = "0.7"
readerwriter = {path = "../readerwriter", features=["bytes"]}
multi-party-ecdsa = {path = "../multi_party_ecdsa"}
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0"

[dependencies.curv]
git = "https://github.com/KZen-networks/curv"
tag = "v0.2.6"
features = ["ec_secp256k1"]

[dependencies.class_group]
git = "https://github.com/XuyangSong/class"
tag = "v1.4.18"

[[example]]
name = "multi_party_demo"

[[example]]
name = "two_party_demo"