[package]
name = "p2p"
version = "0.1.0"
authors = ["Oleg Andreev <oleganza@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1"
merlin = "2.0"
rand_core = "0.5"
subtle = "2"
curve25519-dalek = { version = "3", features = ["serde"] }
hex = "^0.3"
futures = "0.3"
tokio = {version = "0.2", features=["full","sync"]}
tokio-util = {version = "0.3.1", features=["codec"]}
bytes = "0.5.4"
miscreant = "0.5"
rand = "0.7"
readerwriter = {path = "../readerwriter", features=["bytes"]}
multi-party-ecdsa = {path = "../multi_party_ecdsa"}
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0"
curv = { package = "curv-kzen", version = "0.7" }
thiserror = "1"

time = "0.1"
# ##################################
futures-core = { version = "0.3", default-features = false }
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false }
hyper = "0.13"
# ##################################


[dependencies.class_group]
git = "https://github.com/XuyangSong/class"
tag = "v1.5.2"

# ##################################
[dev-dependencies]
pretty_env_logger = "0.4"
url = "2.2"
# ##################################

[[example]]
name = "multi_party_demo"

[[example]]
name = "two_party_demo"

[[example]]
name = "multi_party_keygen_demo"

[[example]]
name = "multi_party_sign_demo"

[[example]]
name = "server"
