[package]
name = "p2p"
version = "0.1.0"
authors = ["Oleg Andreev <oleganza@gmail.com>, songxuyang"]
edition = "2018"

[dependencies]
byteorder = "1"
merlin = "2.0"
rand_core = "0.5"
curve25519-dalek = { version = "3", features = ["serde"] }
hex = "^0.3"
futures = "0.3"
tokio = {version = "0.2", features=["full","sync"]}
tokio-util = {version = "0.3.1", features=["codec"]}
bytes = "0.5.4"
aes-siv = {version = "0.6.2",features = ["pmac"]}
rand = "0.7"
readerwriter = {path = "../readerwriter", features=["bytes"]}
serde = { version = "1.0", features = ["derive"] }
time = "0.1"
message = {path = "../message"}
